Add top-level demo entity

--- a/hw3/switch_debouncer/db/switch_debouncer.lpc.html
+++ b/hw3/switch_debouncer/db/switch_debouncer.lpc.html
@@ -15,4 +15,52 @@
 <TH>Input only Bidir</TH>
 <TH>Output only Bidir</TH>
 </TR>
+<TR >
+<TD >ssd_bounced</TD>
+<TD >32</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >7</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >ssd_debounced</TD>
+<TD >32</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >7</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >debouncer</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
 </TABLE>
